--- a/pokedex/client/src/components/CardContainer/CardContainer.module.css
+++ b/pokedex/client/src/components/CardContainer/CardContainer.module.css
@@ -6,7 +6,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     padding-left: 2rem ;
     padding-right: 2rem;
-    background: linear-gradient(to bottom, #6ab7f5, #fff);
+    background-color: transparent;
     font-weight: 800;
     margin-bottom: 2rem;
     
