--- a/pokedex/client/src/components/Detail/Detail.module.css
+++ b/pokedex/client/src/components/Detail/Detail.module.css
@@ -32,9 +32,9 @@
 .pokemon_data {
     position: absolute;
     font-weight: 600;
-    color: #aaa;
+    color: #3a444d;;
     top: 55%;
-    left: 55%;
+    left: 53%;
     font-size: clamp(8px, 5vw, 25px);
     transform: translate(-63%, 20%);
 }
@@ -46,7 +46,6 @@
 }
 
 .pokemon_info{
-    
     text-align: right;
     transform: translate(-13%, 1%);
     color: #edf0f3;
