--- a/pokedex/client/src/components/Navbar/Navbar.module.css
+++ b/pokedex/client/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
     align-items: center;
     text-decoration: none;
-    background-color: #6ab7f5;
+    background-color: #5cb2f8;
     font-size: 40px;
     color: black;
 }
